2016-06-10  Richard Biener  <rguenther@suse.de>

	* targhooks.c (default_builtin_vectorization_cost): Adjust
	vec_construct cost.

2016-06-10  Richard Biener  <rguenther@suse.de>

	* gimple-fold.c (gimple_fold_builtin_memory_op): Make sure
	to fold the RHS to a constant if possible.

2016-06-10  Thomas Schwinge  <thomas@codesourcery.com>

	PR middle-end/71373
	* tree-nested.c (convert_nonlocal_omp_clauses)
	(convert_local_omp_clauses): Handle OMP_CLAUSE_ASYNC,
	OMP_CLAUSE_WAIT, OMP_CLAUSE_INDEPENDENT, OMP_CLAUSE_AUTO,
	OMP_CLAUSE__CACHE_, OMP_CLAUSE_TILE.

	* gimplify.c (gimplify_adjust_omp_clauses): Discard
	OMP_CLAUSE_TILE.
	* omp-low.c (scan_sharing_clauses): Don't expect OMP_CLAUSE_TILE.

	* omp-low.c (scan_sharing_clauses): Don't expect
	OMP_CLAUSE__CACHE_.

2016-06-10  Alan Hayward  <alan.hayward@arm.com>

	PR tree-optimization/71407
	PR tree-optimization/71416
	* tree-vect-loop.c (vectorizable_live_operation): Use vectype for
	BIT_FIELD_REF type.

2016-06-10  Richard Biener  <rguenther@suse.de>

	PR middle-end/71477
	* cfgloop.c (alloc_loop): Initialize nb_iterations_likely_upper_bound.

2016-06-09  Eric Botcazou  <ebotcazou@adacore.com>

	* df-problems.c (df_note_bb_compute): Guard use of DF_INSN_INFO_GET.

2016-06-09  Vladimir Makarov  <vmakarov@redhat.com>
	    Jiong Wang  <jiong.wang@arm.com>

	PR rtl-optimization/70751
	* lra-constraints.c (process_alt_operands): Recognize Non-pseudo spilled
	into memory.

2016-06-09 Jonathan Yong  <10walls@gmail.com>

	Revert:
	2015-09-21  Jonathan Yong  <10walls@gmail.com>
        * config/i386/cygwin.h (STARTFILE_SPEC): Explicitly search
        sysroot/usr/lib/32api for additional win32 libraries,
        fixes failing Cygwin bootstrapping.

2016-06-09  Marcin Baczyński <marbacz@gmail.com>

	* diagnostic.h (diagnostic_line_cutoff, diagnostic_flush_buffer):
	delete.

2016-06-09  David Malcolm  <dmalcolm@redhat.com>

	PR bootstrap/71471
	* pretty-print.c (pp_indent): Specify that %p is printed in a